--- a/style.css
+++ b/style.css
@@ -377,7 +377,7 @@ body {
     background-color: rgba(0, 0, 0, 0.5);
     color: var(--secondary-color);
     text-align: center;
-    background-image: url('assets/Prewedding.jpeg');
+    background-image: url('assets2/poto11.jpg');
     background-size: cover;
     background-position: center;
     background-blend-mode: overlay;
